fig2: shrink legend, reposition annotations

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -455,7 +455,7 @@ of the Hessian.
   ymin=-1.1, ymax=1.5,
   grid=major,
   grid style={gray!20},
-  legend style={font=\small, draw=none, fill=none, at={(0.98,0.02)}, anchor=south east},
+  legend style={font=\scriptsize, draw=none, fill=none, at={(0.98,0.02)}, anchor=south east},
   every axis title/.style={font=\normalsize},
   scale only axis,
 ]
@@ -472,8 +472,8 @@ of the Hessian.
   {sqrt(x - 4/5)} \closedcycle;
 \node[circle, fill=black, inner sep=1.5pt] at (axis cs:0.8,0) {};
 \node[above right, font=\small] at (axis cs:0.8,0.05) {$\gamma^\star$};
-\node[blue, font=\small] at (axis cs:1.15,0.85) {All minima global};
-\node[red, font=\small] at (axis cs:0.15,-0.85) {minima exist};
+\node[blue, font=\small] at (axis cs:1.25,0.85) {All minima global};
+\node[red, font=\small] at (axis cs:0.3,-0.85) {minima exist};
 \draw[<->, thin] (axis cs:0.4,-0.632) -- (axis cs:0.4,0);
 \node[font=\footnotesize, anchor=east] at (axis cs:0.38,-0.3) {$\sim\!\sqrt{\gamma^\star - \gamma}$};
 \end{axis}
